--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <div id="arriba"></div>
@@ -25,8 +27,11 @@
             <h1>Alexis Arce</h1>
             <p>Backend</p>
             <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank">Contactar</a>   
-            <a href="https://drive.google.com/file/d/1foUcbhW0yed3pXETItC3Pxa_zPQPRe9y/view?usp=sharing" class="btn" target="_blank">Descargar CV</a>   
-
+            <a href="https://drive.google.com/file/d/1foUcbhW0yed3pXETItC3Pxa_zPQPRe9y/view?usp=sharing" class="btn" target="_blank">Descargar CV</a> 
+            <a href="https://github.com/AlexArce2000" class="btn-github" target="_blank">
+                <i class="fab fa-github"></i> GitHub
+            </a>
+            
         </div>
     </header>
 
@@ -35,7 +40,7 @@
         <div class="container">
             <h2>Sobre mí</h2>
             <p>Soy estudiante de Ingeniería en Informática con una profunda pasión por la tecnología y la resolución de problemas complejos. A lo largo de mi formación académica, he adquirido experiencia en el desarrollo de soluciones tecnológicas. Mi objetivo es seguir aprendiendo y mejorando mis habilidades en diferentes lenguajes de programación, bases de datos y herramientas de desarrollo.
-                Me considero una persona proactiva, con un enfoque en la mejora continua y el trabajo en equipo. A lo largo de mis estudios, he trabajado en varios proyectos que me han permitido perfeccionar mis habilidades técnicas, además de aprender a colaborar eficazmente con otros desarrolladores.</p>
+                Me considero una persona proactiva, con un enfoque en la mejora continua y el trabajo en equipo.</p>
         </div>
     </section>
 
