--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="container">
             <a href="#arriba" class="nav-btn">Inicio</a>
             <a href="#about" class="nav-btn">Sobre mí</a>
+            <a href="#skills" class="nav-btn">Skills & Tecnologías</a>
             <a href="#projects" class="nav-btn">Mis Proyectos</a>
-            <a href="#skills" class="nav-btn">Habilidades</a>
             <a href="#contact" class="nav-btn">Contacto</a>
         </div>
     </nav>
@@ -26,7 +26,7 @@
         <div class="container">
             <h1>Alexis Arce</h1>
             <p>Backend</p>
-            <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank">Contactar</a>   
+            <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank">Enviar un correo</a>   
             <a href="https://drive.google.com/file/d/1foUcbhW0yed3pXETItC3Pxa_zPQPRe9y/view?usp=sharing" class="btn" target="_blank">Descargar CV</a> 
             <a href="https://github.com/AlexArce2000" class="btn-github" target="_blank">
                 <i class="fab fa-github"></i> GitHub
@@ -44,6 +44,92 @@
         </div>
     </section>
 
+    <!-- Sección de Habilidades -->
+    <section id="skills">
+        <div class="container">
+            <h2>Skills & Tecnologías:</h2>
+            <table>
+            <tbody>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Python</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/color/2x/python.png"> 
+                </div>    
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Java</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=13679&format=png&color=000000"> 
+                </div> 
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>C</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=40670&format=png&color=000000"> 
+                </div>
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>JavaScript</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=108784&format=png&color=000000"> 
+                </div>
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Git</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/ios-glyphs/2x/github-2.png"> 
+                </div>
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>SQL</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/ios-filled/2x/sql.png"> 
+                </div>    
+            </td>
+            <tr>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Bash</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=8gWOBXY72Osj&format=png&color=000000"> 
+                </div>    
+            </td>
+        
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>HTML</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/color/2x/html-5.png"> 
+                </div>    
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>CSS</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=21278&format=png&color=000000"> 
+                </div>    
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Postgresql</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=38561&format=png&color=000000"> 
+                </div>    
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Spring boot</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=90519&format=png&color=000000"> 
+                </div>    
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Django</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/?size=100&id=qV-JzWYl9dzP&format=png&color=000000"> 
+                </div>    
+            </td>
+  
+            
+            </tbody>
+            </table>
+        </div>
+    </section>
     <!-- Sección de Proyectos -->
     <section id="projects">
         <div class="container">
@@ -61,29 +147,14 @@
         </div>
     </section>
 
-    <!-- Sección de Habilidades -->
-    <section id="skills">
-        <div class="container">
-            <h2>Habilidades</h2>
-            <ul>
-                <li>Adobe Illustrator</li>
-                <li>Photoshop</li>
-                <li>Figma</li>
-                <li>HTML, CSS</li>
-                <li>JavaScript (básico)</li>
-            </ul>
-        </div>
-    </section>
-
-    <p align="right"><a href="#arriba" class="back-to-top"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2 160 448c0 17.7 14.3 32 32 32s32-14.3 32-32l0-306.7L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg></a></p>
-
     <!-- Sección de Contacto -->
     <section id="contact">
         <div class="container">
             <h2>Contacto</h2>
-            <ul>
-                <li>Email: alexisroarce2000@gmail.com</li>
-            </ul>
+            <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank"><i class="fa-solid fa-envelope" href="mailto:alexisroarce2000@gmail.com" style="color: #77a0c0;font-size: 30px;padding: 10px;"></i></a>
+            <a href="https://wa.me/595983958626" class="btn" target="_blank"><i class="fa-solid fa-phone" style="color: #77a0c0;font-size: 30px; padding: 10px;"></i></a> 
+            <a href="https://www.instagram.com/alexisarce001" class="btn" target="_blank"><i class="fa-brands fa-instagram" style="color: #77a0c0;font-size: 30px; padding: 10px;"></i></a>                
+
         </div>
     </section>
 
