--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
     <!-- Sección de Proyectos -->
     <section id="projects">
         <h2>Mis Proyectos</h2>
-        <!-- Contenedor principal de Swiper -->
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide project-card">
@@ -144,9 +143,8 @@
                 <div class="swiper-slide project-card">
                     <h3>BookBase</h3>
                     <p>Aplicación web que permite a los usuarios gestionar su colección de libros con facilidad. Desarrollada con Angular en el frontend y Spring Boot en el backend, ofrece todas las operaciones CRUD esenciales: crear, leer, actualizar y eliminar.</p>
-                    <a href='https://postimg.cc/N5NN0Sz1' target='_blank'><img src='https://i.postimg.cc/3xhztHjb/bookbase1.png' border='0' alt='bookbase1'/></a>
+                    <a href='https://github.com/AlexArce2000/crud-angular-spring' target='_blank'><img src='https://i.postimg.cc/3xhztHjb/bookbase1.png' border='0' alt='bookbase1'/></a>
                 </div>
-                <!-- Puedes agregar más proyectos aquí -->
             </div>
     
             <!-- Agregar navegación (opcional) -->
