--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide project-card">
                     <h3>CMS</h3>
-                    <p>Este proyecto es un Content Management System (CMS) desarrollado como parte de la materia Ingeniera de Software. El sistema permite gestionar contenidos de manera eficiente, proporcionando funcionalidades de administración, visualización y edición de datos a través de una interfaz amigable.</p>
+                    <p>Este proyecto es un Content Management System (CMS) desarrollado con Django y Bootstrap como parte de la materia Ingeniera de Software. El sistema permite gestionar contenidos de manera eficiente, proporcionando funcionalidades de administración, visualización y edición de datos a través de una interfaz amigable.</p>
                     <a href='https://github.com/AlexArce2000/cms.git' target='_blank'><img src='https://i.postimg.cc/SNT6j6TQ/cms1.png' border='0' alt='cms1'/></a>
                 </div>
                 <div class="swiper-slide project-card">
@@ -145,11 +145,14 @@
                     <p>Aplicación web que permite a los usuarios gestionar su colección de libros con facilidad. Desarrollada con Angular en el frontend y Spring Boot en el backend, ofrece todas las operaciones CRUD esenciales: crear, leer, actualizar y eliminar.</p>
                     <a href='https://github.com/AlexArce2000/crud-angular-spring' target='_blank'><img src='https://i.postimg.cc/3xhztHjb/bookbase1.png' border='0' alt='bookbase1'/></a>
                 </div>
+                <div class="swiper-slide project-card">
+                    <h3>Reloj Digital</h3>
+                    <p>Este proyecto es un reloj digital interactivo creado con HTML, CSS y JavaScript. Su propósito es mostrar la hora actual en tiempo real, actualizándose cada segundo.</p>
+                    <a href='https://alexarce2000.github.io/reloj-digital/' target='_blank'><img src='https://i.postimg.cc/PqW09fXv/reloj.png' border='0' alt='reloj'/></a>
+                </div>
             </div>
     
-            <!-- Agregar navegación (opcional) -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+
         </div>
     </section>
     
