--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Alexis Arce</h1>
             <p>Backend</p>
             <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank">Enviar un correo</a>   
-            <a href="https://drive.google.com/file/d/1y-M45xjxipJxBUQhZAiwwybR5PQg3J-W/view?usp=sharing" class="btn" target="_blank">Descargar CV</a> 
+            <a href="https://drive.google.com/file/d/1Xxpv4AA5-hWleF7XxKxVWm8X0qj7ezV7/view?usp=sharing" class="btn" target="_blank">Descargar CV</a> 
             <a href="https://github.com/AlexArce2000" class="btn-github" target="_blank">
                 <i class="fab fa-github"></i> GitHub
             </a>
@@ -146,9 +146,9 @@
                     <a href='https://github.com/AlexArce2000/crud-angular-spring' target='_blank'><img src='https://i.postimg.cc/3xhztHjb/bookbase1.png' border='0' alt='bookbase1'/></a>
                 </div>
                 <div class="swiper-slide project-card">
-                    <h3>Reloj Digital</h3>
-                    <p>Este proyecto es un reloj digital interactivo creado con HTML, CSS y JavaScript. Su propósito es mostrar la hora actual en tiempo real, actualizándose cada segundo.</p>
-                    <a href='https://alexarce2000.github.io/reloj-digital/' target='_blank'><img src='https://i.postimg.cc/PqW09fXv/reloj.png' border='0' alt='reloj'/></a>
+                    <h3>Reloj</h3>
+                    <p>Este proyecto es un reloj que simula a una estructura del lenguaje C está creado con HTML, CSS y JavaScript. Su propósito es mostrar la hora actual en tiempo real, actualizándose cada segundo.</p>
+                    <a href='https://alexarce2000.github.io/reloj-struct/' target='_blank'><img src='https://i.postimg.cc/DymTXXnM/image.png' border='0' alt='reloj'/></a>
                 </div>
             </div>
     
