fuente + paleta de colores

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 </head>
 <body>
@@ -24,8 +25,7 @@
     <!-- Sección de Portada -->
     <header class="hero">
         <div class="container">
-            <h1>Alexis Arce</h1>
-            <p>Backend</p>
+            <h1><span id="typed"></span></h1>
             <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank">Enviar un correo</a>   
             <a href="https://drive.google.com/file/d/1Xxpv4AA5-hWleF7XxKxVWm8X0qj7ezV7/view?usp=sharing" class="btn" target="_blank">Descargar CV</a> 
             <a href="https://github.com/AlexArce2000" class="btn-github" target="_blank">
@@ -52,15 +52,15 @@
             <tbody>
             <td align="center" width="20%">
                 <div class="skill-box">
-                    <span><b><center>Python</center></b></span> 
-                    <img height=65px src="https://img.icons8.com/color/2x/python.png"> 
-                </div>    
-            </td>
-            <td align="center" width="20%">
-                <div class="skill-box">
                     <span><b><center>Java</center></b></span> 
                     <img height=65px src="https://img.icons8.com/?size=100&id=13679&format=png&color=000000"> 
                 </div> 
+            </td>
+            <td align="center" width="20%">
+                <div class="skill-box">
+                    <span><b><center>Python</center></b></span> 
+                    <img height=65px src="https://img.icons8.com/color/2x/python.png"> 
+                </div>    
             </td>
             <td align="center" width="20%">
                 <div class="skill-box">
@@ -166,8 +166,7 @@
             <a href="https://www.instagram.com/alexisarce001" class="btn" target="_blank"><i class="fa-brands fa-instagram" style="color: #77a0c0;font-size: 30px; padding: 10px;"></i></a>                
 
         </div>
-    </section>
-
+    </section>      
     <script src="js/script.js"></script>
 </body>
 </html>
