agregado encabezado + form contactos

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     <!-- Sección de Portada -->
     <header class="hero">
         <div class="container">
+            <h1>Hola, soy Alexis Arce</h1>
             <h1><span id="typed"></span></h1>
-            <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank">Enviar un correo</a>   
+            <a href="#contact" class="btn" target="_blank">Enviar un mensaje</a>   
             <a href="https://drive.google.com/file/d/1Xxpv4AA5-hWleF7XxKxVWm8X0qj7ezV7/view?usp=sharing" class="btn" target="_blank">Descargar CV</a> 
             <a href="https://github.com/AlexArce2000" class="btn-github" target="_blank">
                 <i class="fab fa-github"></i> GitHub
@@ -150,8 +151,13 @@
                     <p>Este proyecto es un reloj que simula a una estructura del lenguaje C está creado con HTML, CSS y JavaScript. Su propósito es mostrar la hora actual en tiempo real, actualizándose cada segundo.</p>
                     <a href='https://alexarce2000.github.io/reloj-struct/' target='_blank'><img src='https://i.postimg.cc/DymTXXnM/image.png' border='0' alt='reloj'/></a>
                 </div>
+
             </div>
-    
+            <div style="text-align: left; margin-top: 10px; font-size: 0.88em; padding: 5px 10px 0 10px; color: #77a0c0;">
+                Para más proyectos en mi GitHub, visita el siguiente enlace:
+                <a href="https://github.com/AlexArce2000" target="_blank" class="btn" style="color: white;">Más proyectos</a>
+            </div>
+            
 
         </div>
     </section>
@@ -161,12 +167,25 @@
     <section id="contact">
         <div class="container">
             <h2>Contacto</h2>
-            <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank"><i class="fa-solid fa-envelope" href="mailto:alexisroarce2000@gmail.com" style="color: #77a0c0;font-size: 30px;padding: 10px;"></i></a>
-            <a href="https://wa.me/595983958626" class="btn" target="_blank"><i class="fa-solid fa-phone" style="color: #77a0c0;font-size: 30px; padding: 10px;"></i></a> 
-            <a href="https://www.instagram.com/alexisarce001" class="btn" target="_blank"><i class="fa-brands fa-instagram" style="color: #77a0c0;font-size: 30px; padding: 10px;"></i></a>                
+            <a href="mailto:alexisroarce2000@gmail.com" class="btn" target="_blank"><i class="fa-solid fa-envelope" href="mailto:alexisroarce2000@gmail.com" style="color: #77a0c0;font-size: 30px;padding: 10px;" title="Enviar un correo directamente"></i></a>
+            <a href="https://wa.me/595983958626" class="btn" target="_blank"><i class="fa-solid fa-phone" style="color: #77a0c0;font-size: 30px; padding: 10px;" title="Whatsapp"></i></a> 
+            <a href="https://www.instagram.com/alexisarce001" class="btn" target="_blank"><i class="fa-brands fa-instagram" style="color: #77a0c0;font-size: 30px; padding: 10px;" title="Instagram"></i></a>                
 
         </div>
-    </section>      
+    <!-- Formulario de contacto -->
+    <div class="contact-form">
+        <h3>Enviame un mensaje</h3>
+        <form id="my-form" action="https://formspree.io/f/xanerlap" method="POST">
+          <label for="email">Email:</label>
+          <input type="email" name="email" required />
+  
+          <label for="message">Mensaje:</label>
+          <textarea name="message" rows="5" required></textarea>
+  
+          <button id="my-form-button" class="btn" type="submit">Enviar</button>
+          <p id="my-form-status"></p>
+        </form>
+      </div>
     <script src="js/script.js"></script>
 </body>
 </html>
